--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@types/react-native": "^0.72.8",
 		"eslint": "^9.25.0",
 		"eslint-config-expo": "~10.0.0",
+		"firebase-tools": "^15.6.0",
 		"typescript": "~5.9.2"
 	},
 	"prettier": {
