--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "functions",
 	"scripts": {
-		"lint": "eslint --ext .js,.ts .",
+		"lint": "eslint .",
 		"build": "tsc",
 		"build:watch": "tsc --watch",
 		"serve": "npm run build && firebase emulators:start --only functions",
@@ -25,7 +25,6 @@
 		"eslint": "^8.9.0",
 		"eslint-config-google": "^0.14.0",
 		"eslint-plugin-import": "^2.25.4",
-		"firebase-functions-test": "^3.4.1",
 		"typescript": "^5.7.3"
 	},
 	"private": true
